United StatesChange Country, Oracle Worldwide Web Sites Communities I am a... I want to...
Bug ID: 7085137 -XX:+VerifyOops is broken
7085137 : -XX:+VerifyOops is broken

Details
Type:
Bug
Submit Date:
2011-08-30
Status:
Closed
Updated Date:
2011-10-07
Project Name:
JDK
Resolved Date:
2011-09-30
Component:
hotspot
OS:
generic
Sub-Component:
compiler
CPU:
generic
Priority:
P4
Resolution:
Fixed
Affected Versions:
hs22
Fixed Versions:
hs22

Related Reports
Backport:
Backport:
Relates:

Sub Tasks

Description
I hit my new assert about different code emit size (7063629) when I specified -XX:+VerifyOops on sparc.  It uses set((intptr_t)msg, O0) instruction to set address of message which is new each time, as result set() size could be different.
Replace set() it with patchable_set() to be always 8 instructions.

                                    

Comments
EVALUATION

See main CR
                                     
2011-09-24
EVALUATION

See main CR
                                     
2011-09-12
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-main/hotspot/rev/a64d352d1118
                                     
2011-09-08
EVALUATION

http://hg.openjdk.java.net/hsx/hotspot-comp/hotspot/rev/a64d352d1118
                                     
2011-08-31



Hardware and Software, Engineered to Work Together