7085137: -XX:+VerifyOops is broken

Replace set() with patchable_set() to generate 8 instructions always.

Reviewed-by: iveresov, never, roland